# sentinel

./: .gitignore  README.md  SENTINEL_AI_ARCHITECTURE.md  SENTINEL_ARCHITECTURAL_WHITEPAPER.md  SENTINEL_OPERATIONAL_GUIDE.md  ai_engine.py  demo_runner.py  rust_ai_wrapper.py
Core/: Cargo.toml
Core/sentinel-agi/src/: cognition.py  main.py  tools.py
Core/sentinel-ai/: Cargo.toml  build.rs
Core/sentinel-ai-engine/: inference_server.py  sentinel_pb2.py  sentinel_pb2_grpc.py  serve.py  train.py
Core/sentinel-ai-engine/data/: data_factory.py
Core/sentinel-ai-engine/models/: gcn_v2.py  mamba.py  ode_solver.py  reflex_transformer.py
Core/sentinel-ai/src/: bridge.rs  gcn.rs  lib.rs  rag.rs
Core/sentinel-bench/: omega_harness.py
Core/sentinel-cli/: Cargo.toml
Core/sentinel-cli/src/: main.rs  stress.rs
Core/sentinel-cloud/: Cargo.toml
Core/sentinel-cloud/src/: db.rs  lib.rs  sharding.rs
Core/sentinel-cpg/: Cargo.toml
Core/sentinel-cpg/src/: graph.rs  ingest.rs  lib.rs  mmap_engine.rs  taint.rs
Core/sentinel-cpg/src/traversal/: field_sensitive.rs  mod.rs  object_sensitive.rs  simd_kernels.rs
Core/sentinel-crypto/: Cargo.toml
Core/sentinel-crypto/src/: lib.rs  pqc.rs  zkp.rs
Core/sentinel-formal/: Cargo.toml
Core/sentinel-formal/src/: lib.rs  race_coordinator.rs  solver.rs  ssa.rs  translator.rs
Core/sentinel-formal/src/theory/: arrays.rs  bitvector.rs  mod.rs  strings.rs  uninterpreted.rs
Core/sentinel-orchestrator/: Cargo.toml  build.rs
Core/sentinel-orchestrator/proto/: sentinel.proto
Core/sentinel-orchestrator/src/: consensus.rs  lib.rs  mesh.rs  scheduler.rs  server.rs
Core/sentinel-parser/: Cargo.toml
Core/sentinel-parser/src/: bloom.rs  lib.rs  pipeline.rs  resolver.rs
Core/sentinel-reflex/: Cargo.toml
Core/sentinel-reflex/src/: lib.rs  synthesizer.rs  vm.rs
Core/sentinel-rules/: Cargo.toml
Core/sentinel-rules/src/: lib.rs
Core/sentinel-rules/src/cwe/: cwe_502.rs  cwe_78.rs  cwe_89.rs  mod.rs
Core/sentinel-shared/: Cargo.toml
Core/sentinel-shared/src/: lib.rs  telemetry.rs
Core/sentinel-symbolic/: Cargo.toml
Core/sentinel-symbolic/src/: lib.rs  walker.rs
Frontend/: index.html  tailwind.config.ts
Frontend/public/: engine_state.json
Frontend/src/: App.tsx  index.css  premium-ui.css
Frontend/src/components/: AutomationSection.tsx  BrandIcons.tsx  BrandsSection.tsx  CTA.tsx  CodeDiffViewer.tsx  CodeVisual.tsx  ComparisonTable.tsx  CoreProposition.tsx  CreatorsSection.tsx  DocsContent.tsx  EmbeddedSection.tsx  FeatureBentoGrid.tsx  FeatureShowcase.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  IntegrationsGrid.tsx  LogoCloud.tsx  Navbar.tsx  OrbitalIllustration.tsx  PricingSection.tsx  ProblemSection.tsx  Stats.tsx  TerminalDemo.tsx  Testimonials.tsx  ThreatMonitor.tsx  TrustSection.tsx  UseCasesSection.tsx
Frontend/src/components/ui/: AnimatedBorder.tsx  FloatingOrb.tsx  GlowingCard.tsx  PremiumButton.tsx  SectionBadge.tsx  button.tsx
Frontend/src/pages/: Automation.tsx  Contact.tsx  Docs.tsx  Engine.tsx  HowItWorksPage.tsx  Index.tsx  Security.tsx
Infrastructure/k8s/: analysis-nodes.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  SPECIFICATION.md
tests/: sovereign_race_test.rs  sovereign_taint_chain.rs
