[workspace]
resolver = "2"
members = [
    "sentinel-cli",
    "sentinel-parser",
    "sentinel-cpg",
    "sentinel-rules",
    "sentinel-formal",
    "sentinel-symbolic",
    "sentinel-cloud",
    "sentinel-ai",
    "sentinel-crypto",
    "sentinel-orchestrator",
    "sentinel-reflex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sentinel Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tree-sitter = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
