[package]
name = "sentinel-ai"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Integration with C-API or Python bridge
ndarray = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
bincode = "1.3"
tonic = "0.10.2"
prost = "0.12.6"
prost-types = "0.12.6"
tracing-futures = "0.2.5"

[build-dependencies]
tonic-build = "0.10.2"
protoc-bin-vendored = "3.2.0"
