[package]
name = "sentinel-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon = "1.8"
indicatif = "0.17"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
sentinel-parser = { path = "../sentinel-parser" }
sentinel-cpg = { path = "../sentinel-cpg" }
sentinel-rules = { path = "../sentinel-rules" }
sentinel-formal = { path = "../sentinel-formal" }
sentinel-symbolic = { path = "../sentinel-symbolic" }
sentinel-cloud = { path = "../sentinel-cloud" }
sentinel-ai = { path = "../sentinel-ai" }
sentinel-crypto = { path = "../sentinel-crypto" }
sentinel-reflex = { path = "../sentinel-reflex" }
serde_json = "1.0"
chrono = "0.4"
