[package]
name = "sentinel-cloud"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
# Mocking heavy cloud deps
tokio = { version = "1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
