[package]
name = "sentinel-formal"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
sentinel-cpg = { path = "../sentinel-cpg" }
tokio = { version = "1", features = ["full"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
