[package]
name = "sentinel-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["full"] }
sentinel-cloud = { path = "../sentinel-cloud" }
tonic = "0.10"
prost = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"
