[package]
name = "sentinel-parser"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tree-sitter.workspace = true
tracing.workspace = true
rayon = "1.8"
dashmap = "5.5"
crossbeam = "0.8"
num_cpus = "1.16"
# Language grammars
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"


